--- a/public/frontend/css/footer.css
+++ b/public/frontend/css/footer.css
@@ -2,6 +2,7 @@
 
 footer {
     display: flex;
+    flex-wrap: wrap;
     background-color: var(--green);
     justify-content: space-between;
     align-items: center;
