--- a/public/frontend/css/hero.css
+++ b/public/frontend/css/hero.css
@@ -19,8 +19,12 @@
 }
 
 @media screen and (max-width: 852px) {
+    .heroText {
+        height: 300px;
+    }
+
     .heroText h1 {
-        padding: 2rem 10rem;
+        padding: 7rem 10rem;
     }
 
     .heroText img {
@@ -30,12 +34,12 @@
 
 @media screen and (max-width: 530px) {
     .heroText h1 {
-        padding: 2rem 5rem;
+        padding: 7rem 5rem;
     }
 }
 
 @media screen and (max-width: 360px) {
     .heroText h1 {
-        padding: 2rem 3rem;
+        padding: 7rem 3rem;
     }
 }
