--- a/public/frontend/css/kollektionsside.css
+++ b/public/frontend/css/kollektionsside.css
@@ -15,6 +15,22 @@
     font-family: 'Rosario', sans-serif;
 }
 
+.sortingContainer {
+    width: 100%;
+    background-color: var(--lightGreen);
+    padding: 0.5rem 2rem;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: end;
+}
+
+.sortingContainer select {
+    border: none;
+    background: var(--white);
+    padding: 0.3rem;
+    font-family: 'Rosario', sans-serif;
+}
+
 @media screen and (max-width: 1112px) {
     .allProductHeader {
         width: 48%;
