all product filter is done

--- a/public/frontend/css/animation.css
+++ b/public/frontend/css/animation.css
@@ -1,4 +1,4 @@
-.links_box--open {
+.links_box--open, .mobileFilterContainer--open {
     margin-left: 0px !important;
     opacity: 100% !important;
 }
