--- a/public/frontend/css/kollektionsside.css
+++ b/public/frontend/css/kollektionsside.css
@@ -38,6 +38,7 @@
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
+    width: 20%;
 }
 
 .filter {
@@ -62,4 +63,80 @@
 
 .filter input {
     width: 2rem;
+}
+
+.allProducts_wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.seo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.seoLine {
+    height: 1px;
+    width: 100%;
+    background-color: var(--green);
+    margin-bottom: 1rem;
+}
+
+.seoText {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    font-family: 'Rosario', sans-serif;
+}
+
+.allProducts_container {
+    width: 100%;
+}
+
+.allProducts_list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    column-gap: 1rem;
+    justify-content: center;
+}
+
+.allProduct_product {
+    box-shadow: 0px 1px 1px 0 rgba(0, 0, 0, 0.2), 0px 10px 10px 0px rgba(0, 0, 0, 0.19);
+    margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.allProduct_product img {
+    width: 100%;
+}
+
+.allProduct_listPage {
+    list-style: none;
+    padding: 1rem;
+    text-align: center;
+    font-family: 'Rosario', sans-serif;
+}
+
+.allProduct_listPage li {
+    display: inline-block;
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.allProduct_listPage li:hover {
+    color: var(--green);
+}
+
+.allProduct_listPage .active {
+    color: var(--white);
+    background-color: var(--green);
+}
+
+.allProduct_listPage .active:hover {
+    color: var(--white);
 }
