--- a/public/frontend/css/colors.css
+++ b/public/frontend/css/colors.css
@@ -1,7 +1,7 @@
 :root {
     --green: #829B3A;
     --lightGreen: #C4DF53;
-    --orange: #FCD177;
+    --orange: #F57E18;
     --black: #1A1A1A;
     --white: #FFFFFF;
     --gray: #D9D9D9;
