updated font and added data to cart - missing quantity data on item

--- a/public/frontend/css/footer.css
+++ b/public/frontend/css/footer.css
@@ -41,7 +41,7 @@ footer .svg {
     color: var(--white);
     padding: 0.3rem 0.1rem;
     text-decoration: none;
-    font-family: 'Rosario', sans-serif;
+    font-family: 'Rosarivo', sans-serif;
     font-weight: 400;
     font-size: 1rem;
 }
@@ -69,7 +69,7 @@ footer .svg {
 
 .kontakt p {
     color: var(--white);
-    font-family: 'Rosario', sans-serif;
+    font-family: 'Rosarivo', sans-serif;
     padding: 0 0.5rem;
 }
 
