--- a/public/frontend/css/header.css
+++ b/public/frontend/css/header.css
@@ -22,7 +22,7 @@ header {
     color: var(--white);
     padding: 0 1rem;
     text-decoration: none;
-    font-family: 'Rosario', sans-serif;
+    font-family: 'Rosarivo', sans-serif;
     font-weight: 400;
     font-size: 1rem;
 }
