--- a/public/frontend/css/480.css
+++ b/public/frontend/css/480.css
@@ -27,7 +27,7 @@
         display: flex;
         padding: 0.5rem 1rem;
         text-decoration: none;
-        font-family: 'Rosario', sans-serif;
+        font-family: 'Rosarivo', sans-serif;
         font-weight: bold;
         font-size: 1rem;
         color: var(--white);
