--- a/public/frontend/css/produktside.css
+++ b/public/frontend/css/produktside.css
@@ -3,7 +3,7 @@
     gap: 2rem;
     padding: 2rem;
     width: 100%;
-    font-family: 'Rosario', sans-serif;
+    font-family: 'Rosarivo', sans-serif;
 }
 
 .productPageDiv {
@@ -78,7 +78,7 @@
     padding: .5rem 1rem;
     border: 1px solid var(--green);
     background-color: var(--white);
-    font-family: 'Rosario', sans-serif;
+    font-family: 'Rosarivo', sans-serif;
     border-radius: 4px;
     font-size: 1rem;
     cursor: pointer;
