--- a/public/frontend/css/header.css
+++ b/public/frontend/css/header.css
@@ -42,6 +42,10 @@ header {
     padding: 0 1rem;
 }
 
+.svger .open {
+    cursor: pointer;
+}
+
 .links_box {
     margin-left: -570px;
     transition: all .9s;
