--- a/public/frontend/css/produktside.css
+++ b/public/frontend/css/produktside.css
@@ -164,3 +164,7 @@
     border-radius: 100%;
     box-shadow: 0px 1px 1px 0 rgba(0, 0, 0, 0.2), 0px 3px 3px 0px rgba(0, 0, 0, 0.19);
 }
+
+.show {
+    display: block !important;
+}
