tilføj til kurv fra produktside

--- a/public/frontend/css/produktside.css
+++ b/public/frontend/css/produktside.css
@@ -107,7 +107,7 @@
     margin-bottom: 1rem;
 }
 
-.moreLessButtons {
+/* .moreLessButtons {
     display: flex;
     gap: .5rem;
     align-items: center;
@@ -128,10 +128,13 @@
     background: var(--gray);
 }
 
-.moreLessButtons p {
-    padding: .5rem;
+.moreLessButtons input {
     font-size: 1.5rem;
-}
+    border: none;
+    padding: 0;
+    width: 32px;
+    text-align: center;
+} */
 
 .kurvButton {
     width: 100%;
@@ -163,4 +166,34 @@
     height: 10px;
     border-radius: 100%;
     box-shadow: 0px 1px 1px 0 rgba(0, 0, 0, 0.2), 0px 3px 3px 0px rgba(0, 0, 0, 0.19);
+}
+
+.moreLessButtons{
+    border: #829B3A solid 1px;
+    border-radius: 4px;
+    padding: .5rem;
+    display: flex;
+}
+.moreLessButtons input[type="number"]{
+    width: 2rem;
+    position: relative;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    resize: vertical;
+    font-family: 'Rosarivo';
+}
+.moreLessButtons input[type="number"]:focus-visible{
+    outline: #C2C2C2;
+}
+.moreLessButtons input[type="button"]{
+    cursor: pointer;
+    font-size: 24px;
+    font-family: 'Rosarivo';
+    line-height: 16px;
+}
+.moreLessButtons input{
+    border: none;
+    background: none;
+    border-radius: 0;
 }
