--- a/public/frontend/css/kurv.css
+++ b/public/frontend/css/kurv.css
@@ -77,6 +77,7 @@
     .drawer_cart.open{
         right: 0;
         transition: right 0.25s cubic-bezier(0.104, 0.204, 0.492, 1);
+        z-index: 10;
     }
     #drawer_cart__form{
         height: 100vh;
