--- a/public/frontend/css/hero.css
+++ b/public/frontend/css/hero.css
@@ -1,13 +1,20 @@
 .heroText {
     height: 500px;
     overflow: hidden;
+    position: relative;
 }
 
 .heroText h1 {
     color: var(--white);
     font-family: 'Patrick Hand', cursive;
-    position: relative;
     padding: 2rem 2rem;
-    top: -300px;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+}
+
+.heroText img {
+    min-width: 100vw;
 }
